--- a/src/EventStore.Core.Tests/EventStore.Core.Tests.csproj
+++ b/src/EventStore.Core.Tests/EventStore.Core.Tests.csproj
@@ -668,6 +668,7 @@
     <Compile Include="ClientAPI\ExpectedVersion64Bit\persistent_subscription_with_event_numbers_greater_than_2_billion.cs" />
     <Compile Include="ClientAPI\ExpectedVersion64Bit\MiniNodeWithExistingRecords.cs" />
     <Compile Include="Services\Storage\DeletingStream\when_hard_deleting_stream_with_log_version_0.cs" />
+    <Compile Include="Services\Transport\Tcp\TcpClientDispatcherTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EventStore.ClientAPI.Embedded\EventStore.ClientAPI.Embedded.csproj">
